# jimple2json

./: .gitignore  CMakeLists.txt  ChangeLog.md  README.md  jimple.cabal  jimple2json.cabal  package.yaml  stack.yaml
.github/workflows/: c-cpp.yml  haskell.yml
app/: Main.hs
cmake/: ExternalDependencies.cmake
include/jimple-parser/: lexer.hpp  parser.hpp  token.hpp
lib/: CMakeLists.txt
lib/jimple-parser/: CMakeLists.txt  jimple_declaration.cpp  lexer.cpp  lexer_run.cpp
src/: Ast.hs  Lexer.hs  Parser.hs  ToJson.hs  Utils.hs
src/Parser/: ClassName.hs  Expression.hs  Immediate.hs  Invoke.hs  Modifier.hs  Parser.hs  Type.hs  Utils.hs
test/: CMakeLists.txt  Main.jimple  Main.jimple.expected  Spec.hs  array-false.expected  array-false.jimple  array-true.expected  array-true.jimple  func-call-2-false.expected  func-call-2-false.jimple  func-call-false.expected  func-call-false.jimple  hello-false.expected  hello-false.jimple  hello-true.expected  hello-true.jimple  sort-true.expected  sort-true.jimple  test.kt
test/acceptance/: CMakeLists.txt  HelloWorld.jimple  driver.cpp
test/property/: CMakeLists.txt  lexer.cpp  rapidcheck.cpp
test/property/tokens/: CMakeLists.txt  integer.cpp
test/unit/: CMakeLists.txt  jimple_declaration.test.cpp  lexer.test.cpp
